move the python files in resources